Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjIntegerRetIntObj.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        Integer two
        two:SetValue(66)
        Yoda<Integer, Integer, Integer> yoda
        Integer ret = yoda:useForce(one, two)
        output "passed"
     end
end
