Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjObjIntegerRetBoolObjFail.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        Integer two
        two:SetValue(66)
        Yoda<Integer, Integer, Boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
